fix: menu-bar overlapping

--- a/css/header.css
+++ b/css/header.css
@@ -31,6 +31,7 @@
 }
 
 aside {
+  z-index: 1;
   height: calc(100vh - 65px);
   position: fixed;
   left: 100%;
